--- a/willnotes/index.html
+++ b/willnotes/index.html
@@ -5,10 +5,12 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 
 	<link rel="stylesheet" type="text/css" href="styles.css"/>
+	<link rel="stylesheet" type="text/css" href="gfx.css"/>
 
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js" type="text/javascript"></script>
 	<script type="text/javascript" src="jquery-ui-1.8.24.custom.min.js"></script>
 	<script type="text/javascript" src="jquery.textarea-expander.js"></script>
+	<script type="text/javascript" src="jquery.lightbox_me.js"></script>
 	<script type="text/javascript" src="scripts.js"></script>
 </head>
 <body>
@@ -50,8 +52,6 @@
 		<header>Opened lists</header>
 		<content></content>
 	</section>
-	
-	<footer>Copyright, yo</footer>
 
 <script id="list-template" type="text/template">
 <div class="list" data-id="[id]">
